--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^6.7.3"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1"
   }
