--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,40 @@
 {
-  "name": "server",
+  "name": "new-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js ",
+    "client": "npm run start --prefix=client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
+    "@skbkontur/react-ui": "^4.10.0",
+    "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
-    "express": "^4.18.2",
-    "mongoose": "^6.7.3"
-  },
-  "devDependencies": {
+    "buffer": "^6.0.3",
+    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "jsonwebtoken": "^8.5.1"
+    "express": "^4.18.2",
+    "image-to-base64": "^2.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.1",
+    "multer": "^1.4.5-lts.1",
+    "node-sass": "^8.0.0",
+    "nodemon": "^2.0.20",
+    "react-alert": "^7.0.3",
+    "react-file-base64": "^1.0.3",
+    "react-image-crop": "^10.0.9",
+    "react-native-image-base64": "^0.1.4",
+    "react-responsive-combo-box": "^1.3.0",
+    "react-router-dom": "^5.0.0",
+    "react-tinder-card": "^1.6.2",
+    "sass": "^1.57.1",
+    "styled-components": "^5.3.6"
   }
 }
